# MediaCrawler-App

./: .env.docker  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.deepseek/: instructions.md
Browser-Service/: .env.example  Dockerfile  pyproject.toml
Browser-Service/api/: main.py  schemas.py
Browser-Service/api/routers/: browser.py
Browser-Service/services/: browser_pool.py  health_checker.py
Crawler-Service/: .dockerignore  Dockerfile  main.py  var.py
Crawler-Service/api/: main.py
Crawler-Service/browser/: __init__.py  base.py  playwright_impl.py
Crawler-Service/cmd_arg/: arg.py
Crawler-Service/config/: applier.py  base_config.py  db_config.py  platform_risk_profiles.py
Crawler-Service/engine/: __init__.py  account_manager.py  checkpoint.py  comment_executor.py  crawler_mixins.py  pipeline_executor.py  rate_limiter.py  task_executor.py  task_scheduler.py
Crawler-Service/model/: m_zhihu.py
Crawler-Service/services/: __init__.py  task_loader.py  (+1 more)
Data-API-Service/: .dockerignore  Dockerfile
MediaCrawler-Api/: main.py  package.json
MediaCrawler-Web/: .dockerignore  .env.development  .env.production  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
Signer-Service/: Dockerfile  main.py  pyproject.toml
docs/: MYSQL_PLATFORM_DESIGN.md  MediaCrawler-Pro-设计文档.md  MediaCrawler商业数据平台架构方案.md  爬虫服务独立拆分实施计划.md
scripts/: mysql-manager.mjs
sql/: 00_init.sql  01_tables.sql  03_seed_profile.sql
(+169 files in other folders)
